brane-dsl/tests/snapshots/regression__..__tests__branescript__epi_one.bs.snap
---
source: brane-dsl/tests/regression.rs
expression: res
---
Program {
    block: Block {
        stmts: [
            Import {
                name: Identifier {
                    value: "epi",
                    range: TextRange {
                        start: TextPos {
                            line: 4,
                            col: 8,
                        },
                        end: TextPos {
                            line: 4,
                            col: 11,
                        },
                    },
                },
                version: Semver {
                    value: "latest",
                    range: TextRange {
                        start: TextPos {
                            line: 18446744073709551615,
                            col: 18446744073709551615,
                        },
                        end: TextPos {
                            line: 18446744073709551615,
                            col: 18446744073709551615,
                        },
                    },
                },
                st_funcs: None,
                st_classes: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 4,
                        col: 1,
                    },
                    end: TextPos {
                        line: 4,
                        col: 12,
                    },
                },
            },
            LetAssign {
                name: Identifier {
                    value: "res_umc",
                    range: TextRange {
                        start: TextPos {
                            line: 7,
                            col: 5,
                        },
                        end: TextPos {
                            line: 7,
                            col: 12,
                        },
                    },
                },
                value: Call {
                    expr: Identifier {
                        name: Identifier {
                            value: "local_compute",
                            range: TextRange {
                                start: TextPos {
                                    line: 7,
                                    col: 16,
                                },
                                end: TextPos {
                                    line: 7,
                                    col: 29,
                                },
                            },
                        },
                        st_entry: None,
                    },
                    args: [
                        Instance {
                            name: Identifier {
                                value: "Data",
                                range: TextRange {
                                    start: TextPos {
                                        line: 7,
                                        col: 34,
                                    },
                                    end: TextPos {
                                        line: 7,
                                        col: 38,
                                    },
                                },
                            },
                            properties: [
                                PropertyExpr {
                                    name: Identifier {
                                        value: "name",
                                        range: TextRange {
                                            start: TextPos {
                                                line: 7,
                                                col: 40,
                                            },
                                            end: TextPos {
                                                line: 7,
                                                col: 44,
                                            },
                                        },
                                    },
                                    value: Literal {
                                        literal: String {
                                            value: "umc_utrecht_ect",
                                            range: TextRange {
                                                start: TextPos {
                                                    line: 7,
                                                    col: 48,
                                                },
                                                end: TextPos {
                                                    line: 7,
                                                    col: 65,
                                                },
                                            },
                                        },
                                    },
                                    range: TextRange {
                                        start: TextPos {
                                            line: 7,
                                            col: 40,
                                        },
                                        end: TextPos {
                                            line: 7,
                                            col: 65,
                                        },
                                    },
                                },
                            ],
                            st_entry: None,
                            range: TextRange {
                                start: TextPos {
                                    line: 7,
                                    col: 30,
                                },
                                end: TextPos {
                                    line: 7,
                                    col: 67,
                                },
                            },
                        },
                    ],
                    st_entry: None,
                    locations: All,
                    input: {},
                    result: {},
                    metadata: {},
                    range: TextRange {
                        start: TextPos {
                            line: 7,
                            col: 16,
                        },
                        end: TextPos {
                            line: 7,
                            col: 68,
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 7,
                        col: 1,
                    },
                    end: TextPos {
                        line: 7,
                        col: 69,
                    },
                },
            },
            Attribute(
                List {
                    key: Identifier {
                        value: "loc",
                        range: TextRange {
                            start: TextPos {
                                line: 10,
                                col: 3,
                            },
                            end: TextPos {
                                line: 10,
                                col: 6,
                            },
                        },
                    },
                    values: [
                        String {
                            value: "surf",
                            range: TextRange {
                                start: TextPos {
                                    line: 10,
                                    col: 7,
                                },
                                end: TextPos {
                                    line: 10,
                                    col: 13,
                                },
                            },
                        },
                    ],
                    range: TextRange {
                        start: TextPos {
                            line: 10,
                            col: 1,
                        },
                        end: TextPos {
                            line: 10,
                            col: 15,
                        },
                    },
                },
            ),
            LetAssign {
                name: Identifier {
                    value: "res",
                    range: TextRange {
                        start: TextPos {
                            line: 11,
                            col: 5,
                        },
                        end: TextPos {
                            line: 11,
                            col: 8,
                        },
                    },
                },
                value: Call {
                    expr: Identifier {
                        name: Identifier {
                            value: "aggregate",
                            range: TextRange {
                                start: TextPos {
                                    line: 11,
                                    col: 12,
                                },
                                end: TextPos {
                                    line: 11,
                                    col: 21,
                                },
                            },
                        },
                        st_entry: None,
                    },
                    args: [
                        VarRef {
                            name: Identifier {
                                value: "res_umc",
                                range: TextRange {
                                    start: TextPos {
                                        line: 11,
                                        col: 22,
                                    },
                                    end: TextPos {
                                        line: 11,
                                        col: 29,
                                    },
                                },
                            },
                            st_entry: None,
                        },
                        VarRef {
                            name: Identifier {
                                value: "res_umc",
                                range: TextRange {
                                    start: TextPos {
                                        line: 11,
                                        col: 31,
                                    },
                                    end: TextPos {
                                        line: 11,
                                        col: 38,
                                    },
                                },
                            },
                            st_entry: None,
                        },
                    ],
                    st_entry: None,
                    locations: All,
                    input: {},
                    result: {},
                    metadata: {},
                    range: TextRange {
                        start: TextPos {
                            line: 11,
                            col: 12,
                        },
                        end: TextPos {
                            line: 11,
                            col: 39,
                        },
                    },
                },
                st_entry: None,
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 11,
                        col: 1,
                    },
                    end: TextPos {
                        line: 11,
                        col: 40,
                    },
                },
            },
            Return {
                expr: Some(
                    Call {
                        expr: Identifier {
                            name: Identifier {
                                value: "commit_result",
                                range: TextRange {
                                    start: TextPos {
                                        line: 12,
                                        col: 8,
                                    },
                                    end: TextPos {
                                        line: 12,
                                        col: 21,
                                    },
                                },
                            },
                            st_entry: None,
                        },
                        args: [
                            Literal {
                                literal: String {
                                    value: "surf_res",
                                    range: TextRange {
                                        start: TextPos {
                                            line: 12,
                                            col: 22,
                                        },
                                        end: TextPos {
                                            line: 12,
                                            col: 32,
                                        },
                                    },
                                },
                            },
                            VarRef {
                                name: Identifier {
                                    value: "res",
                                    range: TextRange {
                                        start: TextPos {
                                            line: 12,
                                            col: 34,
                                        },
                                        end: TextPos {
                                            line: 12,
                                            col: 37,
                                        },
                                    },
                                },
                                st_entry: None,
                            },
                        ],
                        st_entry: None,
                        locations: All,
                        input: {},
                        result: {},
                        metadata: {},
                        range: TextRange {
                            start: TextPos {
                                line: 12,
                                col: 8,
                            },
                            end: TextPos {
                                line: 12,
                                col: 38,
                            },
                        },
                    },
                ),
                data_type: Any,
                output: {},
                attrs: [],
                range: TextRange {
                    start: TextPos {
                        line: 12,
                        col: 1,
                    },
                    end: TextPos {
                        line: 12,
                        col: 39,
                    },
                },
            },
        ],
        table: RefCell {
            value: SymbolTable {
                parent: None,
                functions: {},
                classes: {},
                variables: {},
            },
        },
        ret_type: None,
        attrs: [],
        range: TextRange {
            start: TextPos {
                line: 4,
                col: 1,
            },
            end: TextPos {
                line: 12,
                col: 39,
            },
        },
    },
    metadata: {},
}
